--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,8 +1,13 @@
 <resources>
 
-    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+
+        <item name="colorPrimary">#E91E63</item>
+        <item name="colorPrimaryDark">#C51162</item>
+
+    </style>
+
+    <style name="ForecastListStyle">
     </style>
 
 </resources>
