--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -14,7 +14,8 @@
         android:title="@string/pref_units_label"
         android:key="@string/pref_units_key"
         android:defaultValue="@string/pref_units_metric"
-        android:entryValues="@array/pref_units_values"
-        android:entries="@array/pref_units_options" />
+        android:entries="@array/pref_units_options"
+        android:entryValues="@array/pref_units_values"/>
+
 
 </PreferenceScreen>
