--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,15 @@
 <resources>
 
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-
         <item name="colorPrimary">#E91E63</item>
         <item name="colorPrimaryDark">#C51162</item>
+        <item name="android:icon">@mipmap/ic_launcher</item>
+
 
     </style>
+
+
+
 
     <style name="ForecastListStyle">
     </style>
