--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -3,6 +3,7 @@
     android:id="@+id/weather_detail_container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/sunshine_light_blue"
     tools:context="com.example.android.sunshine.app.DetailActivity"
     tools:ignore="MergeRootFrame"/>
 
