--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -25,6 +25,12 @@
 
     </android.support.design.widget.AppBarLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:baselineAligned="false">
+
     <fragment
         android:id="@+id/fragment_forecast"
         android:name="com.example.android.sunshine.app.ForecastFragment"
@@ -38,6 +44,8 @@
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="4" />
+
+    </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
 
