--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -35,7 +35,7 @@
 
     <fragment
         android:id="@+id/fragment_forecast"
-        android:name="com.example.android.sunshine.app.ForecastFragment"
+        android:name="com.classic.android.sunshine.app.ForecastFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
