--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -7,7 +7,7 @@
     android:baselineAligned="false"
     android:divider="?android:attr/dividerHorizontal"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".Activities.MainActivity">
 
     <android.support.design.widget.AppBarLayout android:id="@+id/appbar"
         android:layout_width="match_parent"
@@ -35,7 +35,7 @@
 
     <fragment
         android:id="@+id/fragment_forecast"
-        android:name="com.classic.android.sunshine.app.ForecastFragment"
+        android:name="com.classic.android.sunshine.app.Fragments.ForecastFragment"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="2"
